--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/krbaio3/cursoNodeJS/issues"
   },
   "homepage": "https://github.com/krbaio3/cursoNodeJS#readme",
+  "dependencies": {
+    "@types/node": "^8.0.50"
+  },
   "devDependencies": {
     "eslint": "^4.10.0"
   }
