--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/krbaio3/cursoNodeJS#readme",
   "dependencies": {
-    "@types/node": "^8.0.50"
+    "@types/node": "^8.0.50",
+    "request": "^2.83.0"
   },
   "devDependencies": {
     "eslint": "^4.10.0"
